# cxu-buildroot

./: .config 
package/: Config.in
package/cxu-tfmicro-demo/: Config.in  cxu-tfmicro-demo.mk
package/cxu-tfmicro-demo/src/: CMakeLists.txt  Cxu0.v  custom_layer.cc  custom_layer.h  linear_cfu_wrapper.h  main.cc  main_model.cc
package/cxu_tests/: Config.in  cxu_test.mk
package/cxu_tests/src/: aes_cxu_wrappers.h  aes_hw.c  aes_sw.c  csr.h  main.c
package/gcc/13.4.0/: 0005-libcody-Make-it-buildable-by-C-11-to-C-26.patch
package/gcc/14.3.0/: 0005--libcody-Make-it-buildable-by-C-11-to-C-26.patch
package/gcc/15.2.0/: 0005-libcody-Make-it-buildable-by-C-11-to-C-26.patch
package/gzip_cxu/: Config.in  gzip_cxu.mk
package/python-pytorch/: Config.in  pytorch.mk
package/tflite-micro/: Config.in  tflite-micro.mk
